<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.7</version>
    <relativePath/>
  </parent>

  <groupId>com.rag2agent</groupId>
  <artifactId>rag2agent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>RAG2Agent</name>
  <description>Enterprise RAG and controlled Agent foundation project.</description>

  <modules>
    <module>framework</module>
    <module>infra-ai</module>
    <module>rag-core</module>
    <module>mcp-server</module>
    <module>bootstrap</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <mybatis-plus.version>3.5.14</mybatis-plus.version>
    <sa-token.version>1.44.0</sa-token.version>
    <okhttp.version>4.12.0</okhttp.version>
    <springdoc.version>2.8.14</springdoc.version>
    <spotless.version>2.46.1</spotless.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cn.dev33</groupId>
        <artifactId>sa-token-spring-boot3-starter</artifactId>
        <version>${sa-token.version}</version>
      </dependency>
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <version>${mybatis-plus.version}</version>
      </dependency>
      <dependency>
        <groupId>com.squareup.okhttp3</groupId>
        <artifactId>okhttp</artifactId>
        <version>${okhttp.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <java>
              <removeUnusedImports/>
              <trimTrailingWhitespace/>
              <endWithNewline/>
            </java>
            <pom>
              <sortPom>
                <encoding>UTF-8</encoding>
                <expandEmptyElements>false</expandEmptyElements>
                <sortDependencies>scope,groupId,artifactId</sortDependencies>
                <sortPlugins>groupId,artifactId</sortPlugins>
              </sortPom>
            </pom>
            <formats>
              <format>
                <includes>
                  <include>**/*.md</include>
                  <include>**/*.yml</include>
                  <include>**/*.yaml</include>
                  <include>**/*.js</include>
                  <include>**/*.vue</include>
                </includes>
                <trimTrailingWhitespace/>
                <endWithNewline/>
              </format>
            </formats>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <release>${java.version}</release>
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
